[package]
name = "row-challenge"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
fxhash = "0.2.1"
num_cpus = "1.16.0"
project-root = "0.2.2"

[dev-dependencies]
divan = "0.1.14"


[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
harness = false
name = "trie"
